# deep-dive-analysis-agentic-commerce-augmentation

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  vision.md
adapters/: catalog_loader.py
agents/: autonomy_guard_agent.py  capability_agent.py  commerce_agent.py  explain_agent.py  intent_agent.py  reflection_agent.py
api/: main.py
attribution/: models.py
config/: env.py
data/: demo_memory.json  google_merchant_feed.json  google_shopping_mock.json  intent_taxonomy.json  sample_catalog_empowerment.json
db/: connection.py  empowerment.db
demos/: career_purchase.json  health_purchase.json  learning_purchase.json
docs/: adapters.md  agency-layer.md  architecture.md  attribution.md  build-plan.md  deployment.md  empowerment_metrics.md  feed_schema.md  manifesto.md  new-plan.md  sequence-diagram.md  terminology.md
evaluation/: README.md  run_simulation.py
gemini/: __init__.py
hf_space/: app.py
llm/: __init__.py  gateway.py  orchestrator.py  prompts.py  tools.py
modules/: __init__.py
orchestration/: commerce_service.py  intent_service.py  reflection_service.py
shared/: __init__.py
tests/: conftest.py  test_adapters.py  test_agents.py  test_conversation_api.py  test_empowerment.py  test_google_merchant.py  test_gradio.py  test_intent.py  test_llm_agents.py  test_memory.py  test_offers.py  test_products.py  test_semantic_alignment.py  test_session_manager.py
tmp/: local.db-shm  local.db-wal
ui/: chat_ui.py  goal_tracker.py  reflection_modal.py
web/: README.md  package.json  pnpm-lock.yaml  (+1 more)
(+167 files in other folders)
