[project]
name = "agentic-commerce-augmentation"
version = "0.1.0"
description = "Empowerment-first contextual commerce platform"
authors = [{ name = "Performics Labs" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.105.0",
    "gradio>=4.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.25.0",
    "google-genai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "uvicorn[standard]>=0.23.0",
]

[tool.uv]
managed = true
